fix: wrap text of name of maskbox

--- a/src/page-components/Maskbox/index.module.less
+++ b/src/page-components/Maskbox/index.module.less
@@ -37,9 +37,7 @@
   .name {
     font-weight: bold;
     font-size: 34px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    width: 400px;
     a {
       text-decoration: none;
       color: inherit;
@@ -69,6 +67,7 @@
   }
   .infoList {
     .name {
+      width: 100%;
       font-size: 18px;
       font-weight: bold;
     }
